# float

./: .dev_state.json  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLA.md  CONTRIBUTOR_ASSIGNMENT_AGREEMENT.md  README.md  docker-compose.yml  jwt.py  main.py  makefile  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
backend/: pipelines.py  sync_cli.py  worker.py
backend/api/: live.py  sync.py
backend/app/: base_services.py  config.py  download_worker.py  hooks.py  hooks_auto_title.py  hooks_observers.py  main.py  mcp_loop.py  mcp_server.py  model_registry.py  models.py  routes.py  routes_tools.py  schemas.py  tasks.py  tool_catalog.py  tool_specs.py  workflow_profiles.py
backend/audio/: turn_detector.py
backend/config/: __init__.py  model_catalog.android.yaml  model_catalog.yaml
backend/services/: __init__.py  graph_metadata.py  weaviate_client.py
backend/streaming/: base.py  livekit_service.py  pipecat_service.py
backend/video/: keyframe_detector.py
backend/workers/: multimodal.py  response_worker.py  scheduled_tool_runner.py  task_evaluator.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: Float_Model_Catalog.csv  api_reference.md  architecture_map.md  data_directory.md  design_principles.md  environment setup.md  open_source_licenses.md
docs/feature_overviews/: README.md  agent-console.md  calendar-tasks-and-followups.md  chat-and-input.md  conversations-history-and-storage.md  device-sync-and-streaming.md  memory-knowledge-and-search.md  models-and-runtime-modes.md  personalization-and-modules.md  threads.md  tools-and-actions.md  voice-live-and-passthrough.md
docs/function descriptions/: RAG.md  calendar_tasks_and_subagents.md  chat_interface.md  console.md  conversations.md  database choices notes.txt  distribution_plan.txt  hooks.md  knowledge sync.md  knowledge.md  live_mode.md  memory.md  models_directory.md  object_storage.md  passthrough.md  role definitions example doc.md  sync_and_streaming_design.md  test_conversations.md  threads.md  tools.md  ui_specifications.md  workflows.md  workspaces.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  requirements.txt  vite.config.js
models/: README.md
sae/: hooks.py  inspect.py  steer.py  train.py
scripts/: _codex_inspect.ps1  bootstrap_computer_use.ps1  capture_ui.ps1  computer_use_smoke.py  create_desktop_shortcut.ps1  create_release_snapshot.py  local_provider_smoke.py  responses_image_reuse_smoke.py
tests/: test_sae_steering.py  test_threads_metadata.py
(+319 files in other folders)
